--- a/lab2.html
+++ b/lab2.html
@@ -7,13 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My self</h1>
-    <p>My name is Raunak ,I am from Bihar </p>
-    <h2>Education </h2>
-    <p>Currently i am doing b-tech from rgipt in m&c branch</p>
-    <h3>Hobbies</h3>
-    <p>I love to play chess and doing gym.</p>
+    <img src="./markus-spiske-hvSr_CVecVI-unsplash.jpg">
+    <ol type="I">
+        <li>India</li>
+        <ol type="i">
+            <li>
+                Hindi
+            </li>
+            <li>English</li>
         
+
+        </ol>
+    </ol>
 
 </body>
 </html>
