--- a/task3.html
+++ b/task3.html
@@ -18,6 +18,17 @@
         
 
         </ol>
+        <li>Franch</li>
+        <ol type="i">
+            <li>English</li>
+            <li>Fransis</li>
+        </ol>
+        <li>Pakistan</li>
+        <ol>
+            English
+        </ol>
+        <ol>Urdu</ol>
+
     </ol>
 
 </body>
