--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./t1.html">t1</a>
-    <a href="./T2.html">t2</a>
-    <a href="./T3.html">t3</a>
-    <a href="./t4.html">t4</a>
-    <a href="./t5.html">t5</a>
-    <a href="./t6.html">t6</a>
-    <a href="./T7.html">t7</a>
+    <a href="./lab6.html">t1</a>
+   
 </body>
 </html>
